# study-os-thesis

./: .gitignore  .mcp.json  25.06Besprechung.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Design-Entscheidungen.md  IMPLEMENTATION_PLAN.md  LICENSE  MASTERPLAN.md  Makefile  README.md  REFACTORING_STATE.md  STATUS.md  TEST_PLAN.md  VISION_NO_DB.md  debug.sh  pyproject.toml  pytest.ini
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  PROJECT_CONTEXT_README.md  config.yaml  context.hooks.json  context.json  initial-memories.md  project-context.js  project-context.ts  sync-memory.js
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: statusline.cjs
.github/workflows/: codex-multiturn-evals.yml  evals.yml  package-skills.yml  qa.yml  update-openalex-index.yml
.swarm/: memory.db-shm  memory.db-wal  schema.sql
backend/: .env.example  log_config.json  pyproject.toml
backend/app/: config.py  constants.py  dependencies.py  logging_config.py  main.py
backend/docs/: agent_architecture.md  architecture_guidelines.md  arxiv_scraper_design.md  (+1 more)
evals/: README.md  quality-summary.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: build_skill_release.py  bump_project_version.py  generate_eval_visuals.py  release_changelog.py  route-issue.mjs  run_codex_multiturn_eval.py  run_external_thesis_e2e_eval.py  suggest-sparc.ts  update_openalex_index.py
(+420 files in other folders)
